# product-recommendation

./: .gitignore  README.md
product-recommendation/: .dockerignore  README.md  docker-compose.yml
product-recommendation/backend/: Dockerfile  alembic.ini  pyproject.toml
product-recommendation/backend/app/: __init__.py
product-recommendation/backend/app/api/: deps.py  main.py
product-recommendation/backend/app/api/endpoints/: recommendations.py
product-recommendation/backend/app/api/v1/: api.py
product-recommendation/backend/app/api/v1/endpoints/: products.py  recommendations.py
product-recommendation/backend/app/api/v1/login/: token.py
product-recommendation/backend/app/batch/: train_recommender.py
product-recommendation/backend/app/core/: config.py
product-recommendation/backend/app/db/: base_class.py  codesamples.code-workspace  init_db.py  session.py
product-recommendation/backend/app/ml/: recommender.py
product-recommendation/backend/app/models/: product.py  purchase.py  user.py
product-recommendation/backend/app/schemas/: product.py  token.py
product-recommendation/backend/app/utils/: __init__.py  hash.py
product-recommendation/backend/batch/: Dockerfile
product-recommendation/backend/migrations/: env.py
product-recommendation/backend/scripts/: run_batch.sh  start.sh
product-recommendation/backend/tests/: test_recommender.py
product-recommendation/frontend/: .dockerignore  Dockerfile  next.config.js  package.json
product-recommendation/frontend/app/: layout.tsx  page.tsx  providers.tsx
(+6 files in other folders)
