# Start of Selection
[tool.poetry]
name = "product-recommendation"
version = "0.1.0"
description = "Product recommendation system"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = ">=2.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pydantic = "^2.6.1"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
numpy = "^1.26.3"
alembic = "^1.13.1"
typing-extensions = "^4.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
pydantic-settings = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
strict = true

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
